src/views/fifty-state/styles.scss
@import '@Project/css/variable.scss';

$label_width: 128px;

:global(.rich-text) .groupHeader {
    font-size: 16px;
    font-weight: 600;
    color: $dark_blue;
    margin-bottom: 10px;
}
:global(.rich-text) .barLabel {
    margin: 0;
    width: $label_width;
    padding-right: 15px;
    display: inline-block;
    line-height: 24px;
}
.groupDiv {
    margin-bottom: 27px;
}
.barContainer {
    display: flex;
    width: 100%;
    margin-bottom: 2px;
    padding: 4px 10px;
    position: relative;
    left: -8px;
    cursor: pointer;
    
    &:hover, &.isHighlighted {
        background-color: $highlight_blue;
    }
}

:global(#field-explainer), :global(#group-explainer){
    transition: opacity 0.2s linear;
}
:global(#explainer-wrapper) {
    transition: height 0.2s ease-in-out;
}

.dataLabel {
    position: absolute;
    left: 138px;
    top: 2px;
    font-size: 16px;
    font-weight: 600;
    width: calc(100% - 233px);
    transform: translateX(100%);
    padding-left: 5px;
    transition: transform 0.2s ease-in-out;
}

.placeHolder {
    width: 85px;
}

